--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
     <div class="grid-container">
         <div class="header">The University of Davido</div>
         <div class="main">
-            <div class="article">Article 1</div>
-            <div class="article">Article 2</div>
+            <div class="article">
+                <div class="article-title">Brave New World</div>
+                <div>lorem ipsum asdfasdfasdfsadf asdfasdfsdf</div>
+            </div>
+            <div class="article">
+                <div class="article-title">How Strange</div>
+                <div>lorem ipsum asdfasdfasdfsadf asdfasdfsdf</div>
+            </div>
+            <div class="article">
+                <div class="article-title">Three Strikes And ...</div>
+                <div>lorem ipsum asdfasdfasdfsadf asdfasdfsdf</div>
+            </div>
         </div>
         <div class="top-courses">Top Course Choices</div>
         <div class="navigation">Navigation</div>
