top courses list added

--- a/index.html
+++ b/index.html
@@ -11,19 +11,35 @@
         <div class="header">The University of Davido</div>
         <div class="main">
             <div class="article">
-                <div class="article-title">Brave New World</div>
+                <div class="title">Brave New World</div>
                 <div>lorem ipsum asdfasdfasdfsadf asdfasdfsdf</div>
             </div>
             <div class="article">
-                <div class="article-title">How Strange</div>
+                <div class="title">How Strange</div>
                 <div>lorem ipsum asdfasdfasdfsadf asdfasdfsdf</div>
             </div>
             <div class="article">
-                <div class="article-title">Three Strikes And ...</div>
+                <div class="title">Three Strikes And ...</div>
                 <div>lorem ipsum asdfasdfasdfsadf asdfasdfsdf</div>
             </div>
         </div>
-        <div class="top-courses">Top Course Choices</div>
+        <div class="top-courses">
+            <div class="title">Top Course Choices</div>
+            <ul>
+                <li>Biology</li>
+                <li>Chemistry</li>
+                <li>Marine Biology</li>
+                <li>Electrical Engineering</li>
+                <li>Biomechanical Engineering</li>
+                <li>English</li>
+                <li>Dog Breeding</li>
+                <li>Cat Grooming</li>
+                <li>Website Development</li>
+                <li>Aerospace Administration</li>
+            </ul>
+            <a href="#">See More</a>
+
+        </div>
         <div class="navigation">Navigation</div>
         <div class="footer">Footer</div>
 
