custom bullets and hr added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/bad67ce091.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles.css">
     <title>University of Davido</title>
 </head>
@@ -26,16 +27,16 @@
         <div class="top-courses">
             <div class="title">Top Course Choices</div>
             <ul>
-                <li>Biology</li>
-                <li>Chemistry</li>
-                <li>Marine Biology</li>
-                <li>Electrical Engineering</li>
-                <li>Biomechanical Engineering</li>
-                <li>English</li>
-                <li>Dog Breeding</li>
-                <li>Cat Grooming</li>
-                <li>Website Development</li>
-                <li>Aerospace Administration</li>
+                <li><i class="fa-solid fa-book"></i>Biology</li>
+                <li><i class="fa-solid fa-book"></i>Chemistry</li>
+                <li><i class="fa-solid fa-book"></i>Biology</li>
+                <li><i class="fa-solid fa-book"></i>Electrical Engineering</li>
+                <li><i class="fa-solid fa-book"></i>Biomechanical Engineering</li>
+                <li><i class="fa-solid fa-book"></i>English</li>
+                <li><i class="fa-solid fa-book"></i>Dog Breeding</li>
+                <li><i class="fa-solid fa-book"></i>Cat Grooming</li>
+                <li><i class="fa-solid fa-book"></i>Website Development</li>
+                <li><i class="fa-solid fa-book"></i>Aerospace Administration</li>
             </ul>
             <a href="#">See More</a>
 
