--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 </head>
 <body>
     <div class="grid-container">
-        <div class="header">The University of Davido</div>
+        
+        <div class="header">
+            <hr>
+            <div>The University of Davido</div>
+            <hr>
+        </div>
         <div class="main">
             <div class="article">
-                <div class="title">Brave New World</div>
+                <div class="title">Dave's New World</div>
                 <div>lorem ipsum asdfasdfasdfsadf asdfasdfsdf</div>
             </div>
             <div class="article">
@@ -41,7 +46,14 @@
             <a href="#">See More</a>
 
         </div>
-        <div class="navigation">Navigation</div>
+        <div class="navigation">
+            <button id="HOME"><a href="">HOME</a></button>
+            <button id="HOME"><a href="">HISTORY</a></button>
+            <button id="HOME"><a href="">CAMPUS</a></button>
+            <button id="HOME"><a href="">STUDIES</a></button>
+            <button id="HOME"><a href="">FACULTY</a></button>
+            <button id="HOME"><a href="">ATHLETICS</a></button>
+        </div>
         <div class="footer">Footer</div>
 
 
