lorem ipsum for articles

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         <div class="main">
             <div class="article">
                 <div class="title">Dave's New World</div>
-                <div>lorem ipsum asdfasdfasdfsadf asdfasdfsdf</div>
+                <div>Deserunt reprehenderit aliqua ea exercitation et exercitation fugiat culpa et nulla veniam sunt consectetur reprehenderit. Culpa non magna labore qui tempor ex nostrud adipisicing incididunt cupidatat in tempor. Et pariatur nisi mollit minim nisi amet. Sunt cupidatat ea elit ipsum sunt aute veniam dolore irure consectetur esse esse. Velit cillum aute reprehenderit laborum dolor non ipsum ex minim.</div>
             </div>
             <div class="article">
                 <div class="title">How Strange</div>
-                <div>lorem ipsum asdfasdfasdfsadf asdfasdfsdf</div>
+                <div>Labore do sunt deserunt occaecat nulla nisi veniam. Consequat exercitation et sunt pariatur. Fugiat do ut sint et velit fugiat cillum id aute excepteur. Proident deserunt id incididunt aute labore magna aliquip excepteur irure.</div>
             </div>
             <div class="article">
                 <div class="title">Three Strikes And ...</div>
-                <div>lorem ipsum asdfasdfasdfsadf asdfasdfsdf</div>
+                <div>Et ipsum fugiat occaecat nulla. Laborum est amet ea cupidatat ex elit voluptate dolor voluptate nostrud anim. Pariatur ipsum enim adipisicing proident mollit. Laborum est dolor voluptate minim amet deserunt magna duis commodo pariatur. Quis laboris aute laborum et cillum reprehenderit in adipisicing irure elit pariatur proident deserunt.</div>
             </div>
         </div>
         <div class="top-courses">
@@ -54,7 +54,11 @@
             <button id="HOME"><a href="">FACULTY</a></button>
             <button id="HOME"><a href="">ATHLETICS</a></button>
         </div>
-        <div class="footer">Footer</div>
+        <div class="footer">
+            <hr>
+            <div>This baby website brought to you by the one and only Davido, who up until recently has scratched, clawed, fought, and made a general nuisance of himself for years learning how to do it.  Thanks be to PersevereNow for finally giving me the opportunity to learn to do it the right way!</div>
+            <hr>
+        </div>
 
 
 
