--- a/index.html
+++ b/index.html
@@ -56,13 +56,9 @@
         </div>
         <div class="footer">
             <hr>
-            <div>This baby website brought to you by the one and only Davido, who up until recently has scratched, clawed, fought, and made a general nuisance of himself for years learning how to do it.  Thanks be to PersevereNow for finally giving me the opportunity to learn to do it the right way!</div>
+            <div class="article">This baby website brought to you by the one and only Davido, who up until recently has scratched, clawed, fought, and made a general nuisance of himself for years learning how to do it.  Thanks be to PersevereNow for finally giving me the opportunity to learn to do it the right way!</div>
             <hr>
         </div>
-
-
-
-
     </div>
 </body>
 </html>
